<resources>
    <string name="app_name">Kotlin Task2</string>
    <string name="example_zone_com">example@zone.com</string>
    <string name="username">username</string>
    <string name="phone_number">phone number</string>
    <string name="let_s_do_this">Let\'s do this!</string>
    <string name="i_already_have_an_account">I already have an account...</string>
    <string name="very_long_password">very long password</string>
    <string name="instant_access_to_10_000_000_educational_n_tutorials_lessons_and_workshops">instant access to 10.000.000+ educational \n tutorials, lessons, and workshops.</string>
    <string name="logo">logo</string>
    <string name="sign_up_to_start_n_learning_on_zone_today">Sign up to start \n learning on zone today.</string>
    <string name="background">background</string>
    <string name="good_morning_n_landon">  Good morning, \nLandon!</string>
    <string name="create_a_new_account_here">Create a new account here.</string>
    <string name="do_we_have_the_wrong_person">Do we have the wrong person?</string>
    <string name="i_m_having_trouble_logging_in_help">I\'m having trouble logging in, help!</string>
</resources>